notebook is updated

--- a/notebooks/ModelPrototype.ipynb
+++ b/notebooks/ModelPrototype.ipynb
@@ -180,6 +180,20 @@
     "        768,\n",
     "    ), \"Patch Embedding is not working properly\".capitalize()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59a57450",
+   "metadata": {},
+   "source": [
+    "## Multi Head Attention Layer "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cd91b90",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
