--- a/notebooks/ModelPrototype.ipynb
+++ b/notebooks/ModelPrototype.ipynb
@@ -10,13 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "08855055",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
+    "import math\n",
     "import yaml\n",
     "import torch\n",
     "import joblib\n",
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c5ef2942",
    "metadata": {},
    "outputs": [],
@@ -190,10 +191,100 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0cd91b90",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78b66be4",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "def scaled_dot_product(query: torch.Tensor, key: torch.Tensor, value: torch.Tensor):\n",
+    "    if (\n",
+    "        not isinstance(query, torch.Tensor)\n",
+    "        and isinstance(key, torch.Tensor)\n",
+    "        and isinstance(value, torch.Tensor)\n",
+    "    ):\n",
+    "        raise TypeError(\"All inputs must be torch.Tensor\".capitalize())\n",
+    "\n",
+    "    key = key.transpose(-2, -1)\n",
+    "    scores = torch.matmul(query, key) / math.sqrt(key.size(-1))\n",
+    "    scores = torch.softmax(scores, dim=-1)\n",
+    "    attention = torch.matmul(scores, value)\n",
+    "    return attention\n",
+    "\n",
+    "\n",
+    "class MultiHeadAttentionLayer(nn.Module):\n",
+    "    def __init__(self, nheads: int = 6, dimension: int = 768):\n",
+    "        super(MultiHeadAttentionLayer, self).__init__()\n",
+    "        self.nheads = nheads\n",
+    "        self.dimension = dimension\n",
+    "\n",
+    "        assert (\n",
+    "            self.dimension % self.nheads == 0\n",
+    "        ), \"Dimension must be divisible by number of heads\".capitalize()\n",
+    "\n",
+    "        warnings.warn(\n",
+    "            \"Invalid number of dimensions provided. To avoid errors, ensure the dimension is calculated as: in_channels × patch_size × patch_size.\"\n",
+    "        )\n",
+    "\n",
+    "        self.QKV = nn.Linear(\n",
+    "            in_features=self.dimension, out_features=3 * self.dimension, bias=False\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor):\n",
+    "        if not isinstance(x, torch.Tensor):\n",
+    "            raise TypeError(\"Input must be a torch.Tensor\".capitalize())\n",
+    "        else:\n",
+    "            QKV = self.QKV(x)\n",
+    "            query, key, value = torch.chunk(input=QKV, chunks=3, dim=-1)\n",
+    "            assert (\n",
+    "                query.size() == key.size() == value.size()\n",
+    "            ), \"Query, key, and value must have the same size\".capitalize()\n",
+    "\n",
+    "            query = query.view(\n",
+    "                query.size(0), query.size(1), self.nheads, query.size(-1) // self.nheads\n",
+    "            )\n",
+    "            key = key.view(\n",
+    "                key.size(0), key.size(1), self.nheads, key.size(-1) // self.nheads\n",
+    "            )\n",
+    "            value = value.view(\n",
+    "                value.size(0), value.size(1), self.nheads, value.size(-1) // self.nheads\n",
+    "            )\n",
+    "\n",
+    "            query = query.permute(0, 2, 1, 3)\n",
+    "            key = key.permute(0, 2, 1, 3)\n",
+    "            value = value.permute(0, 2, 1, 3)\n",
+    "\n",
+    "            attention = scaled_dot_product(query=query, key=key, value=value)\n",
+    "            attention = attention.view(\n",
+    "                attention.size(0),\n",
+    "                attention.size(-2),\n",
+    "                attention.size(1),\n",
+    "                attention.size(-1),\n",
+    "            )\n",
+    "            attention = attention.view(\n",
+    "                attention.size(0),\n",
+    "                attention.size(1),\n",
+    "                attention.size(2) * attention.size(3),\n",
+    "            )\n",
+    "\n",
+    "            assert (\n",
+    "                attention.size() == x.size()\n",
+    "            ), \"Attention output must have the same size as input\".capitalize()\n",
+    "\n",
+    "            return attention\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    nheads = 8\n",
+    "    dimension = 256\n",
+    "\n",
+    "    images = torch.randn((1, 196, 256))\n",
+    "    multihead_attention = MultiHeadAttentionLayer(nheads=nheads, dimension=dimension)\n",
+    "\n",
+    "    assert (\n",
+    "        multihead_attention(x=images)\n",
+    "    ).size() == images.size(), \"MultiHeadAttention is not working properly\".capitalize()"
+   ]
   }
  ],
  "metadata": {
