dataloader is done in the notebook

--- a/notebooks/ModelPrototype.ipynb
+++ b/notebooks/ModelPrototype.ipynb
@@ -17,12 +17,19 @@
    "source": [
     "import os\n",
     "import sys\n",
+    "import cv2\n",
     "import math\n",
     "import yaml\n",
     "import torch\n",
     "import joblib\n",
+    "import zipfile\n",
     "import warnings\n",
-    "import torch.nn as nn"
+    "import torch.nn as nn\n",
+    "from PIL import Image\n",
+    "from tqdm import tqdm\n",
+    "from torchvision import transforms\n",
+    "from torch.utils.data import DataLoader\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -76,6 +83,211 @@
     "    elif classname.find(\"BatchNorm\") != -1:\n",
     "        nn.init.normal_(m.weight.data, 1.0, 0.02)\n",
     "        nn.init.constant_(m.bias.data, 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78ccc84b",
+   "metadata": {},
+   "source": [
+    "## DataLoader (Yet to be completed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa227114",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Loader:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        image_path: str = \"./data/raw\",\n",
+    "        image_channels: int = 3,\n",
+    "        image_size: int = 224,\n",
+    "        batch_size: int = 64,\n",
+    "        split_size: float = 0.25,\n",
+    "    ):\n",
+    "        self.image_path = image_path\n",
+    "        self.image_channels = image_channels\n",
+    "        self.image_size = image_size\n",
+    "        self.batch_size = batch_size\n",
+    "        self.split_size = split_size\n",
+    "\n",
+    "        self.train_images = []\n",
+    "        self.train_labels = []\n",
+    "        self.valid_images = []\n",
+    "        self.valid_labels = []\n",
+    "\n",
+    "    def unzip_folder(self):\n",
+    "        if not os.path.exists(\"./data/processed\"):\n",
+    "            os.makedirs(\"./data/processed\")\n",
+    "\n",
+    "        with zipfile.ZipFile(file=self.image_path, mode=\"r\") as file:\n",
+    "            file.extractall(path=\"./data/processed\")\n",
+    "\n",
+    "        print(\"\"\"Extracted file saved in the \"./data/processed\" folder\"\"\")\n",
+    "\n",
+    "    def split_dataset(self, **kwargs):\n",
+    "        X = kwargs[\"X\"]\n",
+    "        y = kwargs[\"y\"]\n",
+    "\n",
+    "        if not isinstance(X, list) and not isinstance(y, list):\n",
+    "            raise ValueError(\"Invalid data type\".capitalize())\n",
+    "\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(\n",
+    "            X, y, test_size=self.split_size, random_state=42\n",
+    "        )\n",
+    "\n",
+    "        return {\n",
+    "            \"X_train\": X_train,\n",
+    "            \"X_test\": X_test,\n",
+    "            \"y_train\": y_train,\n",
+    "            \"y_test\": y_test,\n",
+    "        }\n",
+    "\n",
+    "    def image_transforms(self, type: str = \"RGB\"):\n",
+    "        if type == \"RGB\":\n",
+    "            return transforms.Compose(\n",
+    "                [\n",
+    "                    transforms.Resize((self.image_size, self.image_size)),\n",
+    "                    transforms.ToTensor(),\n",
+    "                    transforms.CenterCrop((self.image_size, self.image_size)),\n",
+    "                    transforms.Normalize([0.5, 0.5, 0.5], [0.5, 0.5, 0.5]),\n",
+    "                ]\n",
+    "            )\n",
+    "        else:\n",
+    "            return transforms.Compose(\n",
+    "                [\n",
+    "                    transforms.Resize((self.image_size, self.image_size)),\n",
+    "                    transforms.ToTensor(),\n",
+    "                    transforms.CenterCrop((self.image_size, self.image_size)),\n",
+    "                    transforms.Normalize([0.5], [0.5]),\n",
+    "                ]\n",
+    "            )\n",
+    "\n",
+    "    def extract_features(self):\n",
+    "        train_path = \"./data/processed/Training\"\n",
+    "        valid_path = \"./data/processed/Testing\"\n",
+    "\n",
+    "        class_names = [\"glioma\", \"meningioma\", \"pituitary\", \"notumor\"]\n",
+    "\n",
+    "        for path in [train_path, valid_path]:\n",
+    "            for label in class_names:\n",
+    "                image_path = os.path.join(path, label)\n",
+    "                for image in tqdm(\n",
+    "                    os.listdir(image_path), desc=\"Extracting images\".title()\n",
+    "                ):\n",
+    "                    single_image_path = os.path.join(image_path, image)\n",
+    "                    if not single_image_path.endswith((\"png\", \"jpg\", \"jpeg\")):\n",
+    "                        raise ValueError(\"Invalid image format\")\n",
+    "\n",
+    "                    image = cv2.imread(single_image_path)\n",
+    "                    image = Image.fromarray(image)\n",
+    "                    image = self.image_transforms(\n",
+    "                        \"GRAY\" if self.image_channels == 1 else \"RGB\"\n",
+    "                    )(image)\n",
+    "\n",
+    "                    if path == train_path:\n",
+    "                        self.train_images.append(image)\n",
+    "                        self.train_labels.append(class_names.index(label))\n",
+    "                    else:\n",
+    "                        self.valid_images.append(image)\n",
+    "                        self.valid_labels.append(class_names.index(label))\n",
+    "\n",
+    "        assert len(self.train_images) == len(self.train_labels)\n",
+    "        assert len(self.valid_images) == len(self.valid_labels)\n",
+    "\n",
+    "        train_dataset = self.split_dataset(X=self.train_images, y=self.train_labels)\n",
+    "\n",
+    "        return {\n",
+    "            \"X_train\": torch.stack(train_dataset[\"X_train\"][:400]).float(),\n",
+    "            \"X_test\": torch.stack(train_dataset[\"X_test\"][:400]).float(),\n",
+    "            \"y_train\": torch.tensor(train_dataset[\"y_train\"][:100], dtype=torch.long),\n",
+    "            \"y_test\": torch.tensor(train_dataset[\"y_test\"][:100], dtype=torch.long),\n",
+    "            \"valid_images\": torch.stack(self.valid_images[:50]).float(),\n",
+    "            \"valid_labels\": torch.tensor(self.valid_labels[:50], dtype=torch.long),\n",
+    "        }\n",
+    "\n",
+    "    def create_dataloader(self):\n",
+    "        dataset = self.extract_features()\n",
+    "\n",
+    "        train_dataloader = DataLoader(\n",
+    "            dataset=list(zip(dataset[\"X_train\"], dataset[\"y_train\"])),\n",
+    "            batch_size=self.batch_size,\n",
+    "            shuffle=True,\n",
+    "        )\n",
+    "        test_dataloader = DataLoader(\n",
+    "            dataset=list(zip(dataset[\"X_test\"], dataset[\"y_test\"])),\n",
+    "            batch_size=self.batch_size,\n",
+    "            shuffle=True,\n",
+    "        )\n",
+    "        valid_dataloader = DataLoader(\n",
+    "            dataset=list(zip(dataset[\"valid_images\"], dataset[\"valid_labels\"])),\n",
+    "            batch_size=self.batch_size,\n",
+    "            shuffle=True,\n",
+    "        )\n",
+    "\n",
+    "        for value, filename in tqdm(\n",
+    "            [\n",
+    "                (train_dataloader, \"train_dataloader.pkl\"),\n",
+    "                (test_dataloader, \"test_dataloader.pkl\"),\n",
+    "                (valid_dataloader, \"valid_dataloader.pkl\"),\n",
+    "            ],\n",
+    "            desc=\"Saving dataloaders\".title(),\n",
+    "        ):\n",
+    "            dump_files(\n",
+    "                value=value, filename=os.path.join(\"./data/processed/\", filename)\n",
+    "            )\n",
+    "\n",
+    "        print(\"Files saved in the folder ./data/processed/\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    parser = argparse.ArgumentParser(\n",
+    "        description=\"Dataloader for the Medical Assistant Task\".title()\n",
+    "    )\n",
+    "    parser.add_argument(\n",
+    "        \"--image_path\",\n",
+    "        type=str,\n",
+    "        default=\"./data/raw/dataset.zip\",\n",
+    "        help=\"Path to the dataset\".capitalize(),\n",
+    "    )\n",
+    "    parser.add_argument(\n",
+    "        \"--image_channels\",\n",
+    "        type=int,\n",
+    "        default=1,\n",
+    "        help=\"Number of image channels\".capitalize(),\n",
+    "    )\n",
+    "    parser.add_argument(\n",
+    "        \"--image_size\", type=int, default=224, help=\"Image size\".capitalize()\n",
+    "    )\n",
+    "    parser.add_argument(\n",
+    "        \"--batch_size\", type=int, default=16, help=\"Batch size\".capitalize()\n",
+    "    )\n",
+    "    parser.add_argument(\n",
+    "        \"--split_size\", type=float, default=0.30, help=\"Split size\".capitalize()\n",
+    "    )\n",
+    "\n",
+    "    args = parser.parse_args()\n",
+    "\n",
+    "    image_path = args.image_path\n",
+    "    image_channels = args.image_channels\n",
+    "    image_size = args.image_size\n",
+    "    batch_size = args.batch_size\n",
+    "    split_size = args.split_size\n",
+    "\n",
+    "    loader = Loader(\n",
+    "        image_path=image_path,\n",
+    "        image_channels=image_channels,\n",
+    "        image_size=image_size,\n",
+    "        batch_size=batch_size,\n",
+    "        split_size=split_size,\n",
+    "    )\n",
+    "\n",
+    "    loader.unzip_folder()\n",
+    "    loader.create_dataloader()\n"
    ]
   },
   {
