multi head attention is completed in the src and notebook

--- a/notebooks/ModelPrototype.ipynb
+++ b/notebooks/ModelPrototype.ipynb
@@ -423,6 +423,25 @@
     "    attention = torch.matmul(scores, value)\n",
     "    return attention\n",
     "\n",
+    "if __name__ == \"__main__\":\n",
+    "    image_channels = 1\n",
+    "    image_size = 224\n",
+    "    patch_size = 16\n",
+    "    total_patches = (image_size // patch_size) ** 2\n",
+    "    embedding_dimension = image_channels * patch_size * patch_size\n",
+    "\n",
+    "    attention = scaled_dot_product(\n",
+    "        query=torch.randn(1, total_patches, embedding_dimension),\n",
+    "        key=torch.randn(1, total_patches, embedding_dimension),\n",
+    "        value=torch.randn(1, total_patches, embedding_dimension),\n",
+    "    )\n",
+    "\n",
+    "    assert attention.size() == (\n",
+    "        total_patches // total_patches,\n",
+    "        total_patches,\n",
+    "        embedding_dimension,\n",
+    "    ), \"Attention output size must match the input size\".capitalize()\n",
+    "\n",
     "\n",
     "class MultiHeadAttentionLayer(nn.Module):\n",
     "    def __init__(self, nheads: int = 6, dimension: int = 768):\n",
