layer normalization is incorporated with the notebook

--- a/notebooks/ModelPrototype.ipynb
+++ b/notebooks/ModelPrototype.ipynb
@@ -516,6 +516,85 @@
     "        multihead_attention(x=images)\n",
     "    ).size() == images.size(), \"MultiHeadAttention is not working properly\".capitalize()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10fddf55",
+   "metadata": {},
+   "source": [
+    "## Layer Normalization Layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4aabd3c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LayerNormalization(nn.Module):\n",
+    "    def __init__(self, normalized_shape: int = 768, eps=1e-05):\n",
+    "        super(LayerNormalization, self).__init__()\n",
+    "\n",
+    "        self.dimension = normalized_shape\n",
+    "        self.eps = eps\n",
+    "        self.alpha = nn.Parameter(\n",
+    "            data=torch.ones(\n",
+    "                (\n",
+    "                    self.dimension // self.dimension,\n",
+    "                    self.dimension // self.dimension,\n",
+    "                    self.dimension,\n",
+    "                )\n",
+    "            ),\n",
+    "            requires_grad=True,\n",
+    "        )\n",
+    "        self.beta = nn.Parameter(\n",
+    "            data=torch.zeros(\n",
+    "                (\n",
+    "                    self.dimension // self.dimension,\n",
+    "                    self.dimension // self.dimension,\n",
+    "                    self.dimension,\n",
+    "                )\n",
+    "            ),\n",
+    "            requires_grad=True,\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor):\n",
+    "        if not isinstance(x, torch.Tensor):\n",
+    "            raise TypeError(\"Input must be a torch.Tensor\".capitalize())\n",
+    "        else:\n",
+    "            mean = torch.mean(x, dim=-1)\n",
+    "            variance = torch.var(x, dim=-1)\n",
+    "\n",
+    "            mean = mean.unsqueeze(-1)\n",
+    "            variance = variance.unsqueeze(-1)\n",
+    "\n",
+    "            x_bar = (x - mean) / torch.sqrt(variance + self.eps)\n",
+    "\n",
+    "            return self.alpha * x_bar + self.beta\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    image_channels = 3\n",
+    "    image_size = 224\n",
+    "    patch_size = 16\n",
+    "    \n",
+    "    total_patches = (image_size // patch_size) ** 2\n",
+    "    dimension = (image_channels * patch_size * patch_size)\n",
+    "    \n",
+    "    norm = LayerNormalization(normalized_shape=dimension)\n",
+    "    images = torch.randn((image_channels//image_channels, total_patches, dimension))\n",
+    "\n",
+    "    assert (\n",
+    "        norm(images).size()\n",
+    "    ) == images.size(), \"Layer Normalization is not working properly\".capitalize()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84335749",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
