FFNN is completed in the notebook

--- a/notebooks/ModelPrototype.ipynb
+++ b/notebooks/ModelPrototype.ipynb
@@ -592,9 +592,94 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84335749",
+   "id": "b2e4149f",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Feed Forward Neural Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0db42db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FeedForwardNeuralNetwork(nn.Module):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        d_model: int = 768,\n",
+    "        dim_feedforward: int = 2048,\n",
+    "        dropout: float = 0.1,\n",
+    "        activation: str = \"gelu\",\n",
+    "    ):\n",
+    "        super(FeedForwardNeuralNetwork, self).__init__()\n",
+    "        self.d_model = d_model\n",
+    "        self.dim_feedforward = dim_feedforward\n",
+    "        self.dropout = dropout\n",
+    "        self.activation_func = activation\n",
+    "\n",
+    "        self.in_features = self.d_model\n",
+    "        self.out_features = self.dim_feedforward\n",
+    "\n",
+    "        if self.activation_func == \"relu\":\n",
+    "            self.activation = nn.ReLU(inplace=True)\n",
+    "        elif self.activation_func == \"leaky\":\n",
+    "            self.activation = nn.LeakyReLU(negative_slope=0.2, inplace=True)\n",
+    "        elif self.activation_func == \"gelu\":\n",
+    "            self.activation = nn.GELU()\n",
+    "        else:\n",
+    "            raise ValueError(\"Invalid activation function\".capitalize())\n",
+    "\n",
+    "        self.layers = []\n",
+    "\n",
+    "        for index in range(2):\n",
+    "            self.layers += [\n",
+    "                nn.Linear(\n",
+    "                    in_features=self.in_features,\n",
+    "                    out_features=self.out_features,\n",
+    "                    bias=False,\n",
+    "                )\n",
+    "            ]\n",
+    "\n",
+    "            if index == 0:\n",
+    "                self.layers += [self.activation]\n",
+    "                self.layers += [nn.Dropout(p=self.dropout)]\n",
+    "\n",
+    "            self.in_features = self.out_features\n",
+    "            self.out_features = self.d_model\n",
+    "\n",
+    "        self.network = nn.Sequential(*self.layers)\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor):\n",
+    "        if not isinstance(x, torch.Tensor):\n",
+    "            raise TypeError(\"Input must be a torch.Tensor\")\n",
+    "        else:\n",
+    "            x = self.network(x)\n",
+    "            return x\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    image_size = 224\n",
+    "    patch_size = 16\n",
+    "    image_channels = 1\n",
+    "    dropout = 0.1\n",
+    "\n",
+    "    total_patches = (image_size // patch_size) ** 2\n",
+    "    dimension = image_channels * patch_size**2\n",
+    "    dim_feedforward = 4 * dimension\n",
+    "\n",
+    "    images = torch.randn(image_channels // image_channels, total_patches, dimension)\n",
+    "\n",
+    "    network = FeedForwardNeuralNetwork(\n",
+    "        d_model=dimension,\n",
+    "        dim_feedforward=dim_feedforward,\n",
+    "        dropout=dropout,\n",
+    "    )\n",
+    "    assert (\n",
+    "        network(images).size()\n",
+    "    ) == images.size(), \"FFNN is not working properly\".capitalize()"
+   ]
   }
  ],
  "metadata": {
