transformer encoder block is completed in the notebook

--- a/notebooks/ModelPrototype.ipynb
+++ b/notebooks/ModelPrototype.ipynb
@@ -680,6 +680,102 @@
     "        network(images).size()\n",
     "    ) == images.size(), \"FFNN is not working properly\".capitalize()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9628ee10",
+   "metadata": {},
+   "source": [
+    "## Transformer Encoder Block"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d74932e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TransformerEncoderBlock(nn.Module):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        nhead: int = 8,\n",
+    "        d_model: int = 768,\n",
+    "        dim_feedforward: int = 2048,\n",
+    "        dropout: float = 0.1,\n",
+    "        activation: str = \"gelu\",\n",
+    "        layer_norm_eps: float = 1e-05,\n",
+    "        bias: bool = False,\n",
+    "    ):\n",
+    "        super(TransformerEncoderBlock, self).__init__()\n",
+    "        self.nheads = nhead\n",
+    "        self.d_model = d_model\n",
+    "        self.dim_feedforward = dim_feedforward\n",
+    "        self.dropout = dropout\n",
+    "        self.activation = activation\n",
+    "        self.layer_norm_eps = layer_norm_eps\n",
+    "        self.bias = bias\n",
+    "\n",
+    "        self.multi_head_attention = MultiHeadAttentionLayer(\n",
+    "            nheads=self.nheads,\n",
+    "            dimension=self.d_model,\n",
+    "        )\n",
+    "\n",
+    "        self.layer_norm1 = LayerNormalization(\n",
+    "            normalized_shape=self.d_model, eps=self.layer_norm_eps\n",
+    "        )\n",
+    "        self.layer_norm2 = LayerNormalization(\n",
+    "            normalized_shape=self.d_model, eps=self.layer_norm_eps\n",
+    "        )\n",
+    "        self.feed_forward_network = FeedForwardNeuralNetwork(\n",
+    "            d_model=self.d_model,\n",
+    "            dim_feedforward=self.dim_feedforward,\n",
+    "            dropout=self.dropout,\n",
+    "            activation=self.activation,\n",
+    "        )\n",
+    "        self.dropout1 = nn.Dropout(p=self.dropout)\n",
+    "        self.dropout2 = nn.Dropout(p=self.dropout)\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor):\n",
+    "        if not isinstance(x, torch.Tensor):\n",
+    "            raise TypeError(\"Input must be a torch.Tensor\")\n",
+    "        else:\n",
+    "            residual = x\n",
+    "            \n",
+    "            x = self.multi_head_attention(x)\n",
+    "            x = self.dropout1(x)\n",
+    "            x = torch.add(x, residual)\n",
+    "            x = self.layer_norm1(x)\n",
+    "            \n",
+    "            residual = x\n",
+    "            \n",
+    "            x = self.feed_forward_network(x)\n",
+    "            x = torch.add(x, residual)\n",
+    "            x = self.layer_norm2(x)\n",
+    "\n",
+    "            return x\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    transformer = TransformerEncoderBlock(\n",
+    "        nhead=8,\n",
+    "        d_model=256,\n",
+    "        dim_feedforward=2048,\n",
+    "        dropout=0.1,\n",
+    "        activation=\"gelu\",\n",
+    "        layer_norm_eps=1e-05,\n",
+    "        bias=False,\n",
+    "    )\n",
+    "    \n",
+    "    images = torch.randn((1, 196, 256))\n",
+    "    \n",
+    "    assert (transformer(images).size()) == images.size(), \"Transformer is not working properly\".capitalize()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c1434d8",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
