--- a/notebooks/ModelPrototype.ipynb
+++ b/notebooks/ModelPrototype.ipynb
@@ -773,6 +773,117 @@
   },
   {
    "cell_type": "markdown",
+   "id": "73328283",
+   "metadata": {},
+   "source": [
+    "## ViT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a1dd190",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ViT(nn.Module):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        image_channels: int = 3,\n",
+    "        image_size: int = 224,\n",
+    "        patch_size: int = 16,\n",
+    "        encoder_layer: int = 4,\n",
+    "        nhead: int = 8,\n",
+    "        d_model: int = 768,\n",
+    "        dim_feedforward: int = 2048,\n",
+    "        dropout: float = 0.1,\n",
+    "        activation: str = \"gelu\",\n",
+    "        layer_norm_eps: float = 1e-05,\n",
+    "        bias: bool = False,\n",
+    "    ):\n",
+    "        super(ViT, self).__init__()\n",
+    "        self.image_channels = image_channels\n",
+    "        self.image_size = image_size\n",
+    "        self.patch_size = patch_size\n",
+    "        self.encoder_layer = encoder_layer\n",
+    "        self.nhead = nhead\n",
+    "        self.d_model = d_model\n",
+    "        self.dim_feedforward = dim_feedforward\n",
+    "        self.dropout = dropout\n",
+    "        self.activation = activation\n",
+    "        self.layer_norm_eps = layer_norm_eps\n",
+    "        self.bias = bias\n",
+    "\n",
+    "        self.layers = []\n",
+    "\n",
+    "        self.patch_embedding = PatchEmbedding(\n",
+    "            image_channels=self.image_channels,\n",
+    "            image_size=self.image_size,\n",
+    "            patch_size=self.patch_size,\n",
+    "            embedding_dimension=self.d_model,\n",
+    "        )\n",
+    "\n",
+    "        # self.transformer = TransformerEncoderBlock(\n",
+    "        #     nhead=self.nhead,\n",
+    "        #     d_model=self.d_model,\n",
+    "        #     dim_feedforward=self.dim_feedforward,\n",
+    "        #     dropout=self.dropout,\n",
+    "        #     activation=self.activation,\n",
+    "        #     layer_norm_eps=self.layer_norm_eps,\n",
+    "        #     bias=self.bias,\n",
+    "        # )\n",
+    "\n",
+    "        self.transformer = nn.Sequential(\n",
+    "            *[\n",
+    "                TransformerEncoderBlock(\n",
+    "                    nhead=self.nhead,\n",
+    "                    d_model=self.d_model,\n",
+    "                    dim_feedforward=self.dim_feedforward,\n",
+    "                    dropout=self.dropout,\n",
+    "                    activation=self.activation,\n",
+    "                    layer_norm_eps=self.layer_norm_eps,\n",
+    "                    bias=self.bias,\n",
+    "                )\n",
+    "                for _ in tqdm(\n",
+    "                    range(self.encoder_layer), desc=\"Transformer Block\".title()\n",
+    "                )\n",
+    "            ]\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor):\n",
+    "        if not isinstance(x, torch.Tensor):\n",
+    "            raise TypeError(\"Input must be a torch.Tensor\")\n",
+    "        else:\n",
+    "            x = self.patch_embedding(x)\n",
+    "\n",
+    "            for layer in self.transformer:\n",
+    "                x = layer(x)\n",
+    "\n",
+    "            return x\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    vit = ViT(\n",
+    "        image_channels=1,\n",
+    "        image_size=224,\n",
+    "        patch_size=16,\n",
+    "        encoder_layer=4,\n",
+    "        nhead=8,\n",
+    "        d_model=256,\n",
+    "        dim_feedforward=4 * 256,\n",
+    "        dropout=0.1,\n",
+    "        activation=\"gelu\",\n",
+    "        layer_norm_eps=1e-05,\n",
+    "        bias=False,\n",
+    "    )\n",
+    "    \n",
+    "    images = torch.randn((1, 1, 224, 224))\n",
+    "    \n",
+    "    assert (vit(images).size()) == images.size(), \"ViT is not working properly\".capitalize()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4c1434d8",
    "metadata": {},
    "source": []
