--- a/notebooks/ModelPrototype.ipynb
+++ b/notebooks/ModelPrototype.ipynb
@@ -786,12 +786,80 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ViT(nn.Module):\n",
+    "class Classifier(nn.Module):\n",
+    "    def __init__(\n",
+    "        self, dimension: int = 768, dropout: float = 0.3, activation: str = \"leaky\"\n",
+    "    ):\n",
+    "        super(Classifier, self).__init__()\n",
+    "\n",
+    "        self.dimension = dimension\n",
+    "        self.dropout = dropout\n",
+    "        self.activation_func = activation\n",
+    "\n",
+    "        if self.activation_func == \"relu\":\n",
+    "            self.activation = nn.ReLU(inplace=True)\n",
+    "        elif self.activation_func == \"leaky\":\n",
+    "            self.activation = nn.LeakyReLU(inplace=True)\n",
+    "        elif self.activation_func == \"gelu\":\n",
+    "            self.activation = nn.GELU()\n",
+    "        elif self.activation_func == \"tanh\":\n",
+    "            self.activation = nn.Tanh()\n",
+    "        else:\n",
+    "            raise ValueError(\"Invalid activation function\")\n",
+    "\n",
+    "        self.in_features = self.dimension\n",
+    "        self.out_features = self.in_features // 4\n",
+    "\n",
+    "        self.layers = []\n",
+    "\n",
+    "        for index in range(2):\n",
+    "            self.layers += [\n",
+    "                nn.Linear(in_features=self.in_features, out_features=self.out_features)\n",
+    "            ]\n",
+    "\n",
+    "            if index == 0:\n",
+    "                self.layers += [nn.BatchNorm1d(num_features=self.out_features)]\n",
+    "                self.layers += [self.activation]\n",
+    "                self.layers += [nn.Dropout(p=self.dropout)]\n",
+    "\n",
+    "            self.in_features = self.out_features\n",
+    "            self.out_features = self.out_features // 4\n",
+    "\n",
+    "        self.layers += [\n",
+    "            nn.Sequential(\n",
+    "                nn.Linear(in_features=self.in_features, out_features=4),\n",
+    "                nn.Softmax(dim=1),\n",
+    "            )\n",
+    "        ]\n",
+    "\n",
+    "        self.classifier = nn.Sequential(*self.layers)\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor):\n",
+    "        if not isinstance(x, torch.Tensor):\n",
+    "            raise TypeError(\"Input must be a torch.Tensor\")\n",
+    "        else:\n",
+    "            return self.classifier(x)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    classifier = Classifier(\n",
+    "        dimension=256,\n",
+    "        dropout=0.3,\n",
+    "        activation=\"leaky\",\n",
+    "    )\n",
+    "\n",
+    "    images = torch.randn((16, 196, 256))\n",
+    "    images = torch.mean(images, dim=1)\n",
+    "    \n",
+    "    assert (classifier(images).size()) == (16, 4), \"Classifier is not working properly\".capitalize()\n",
+    "\n",
+    "class ViTWithClassifier(nn.Module):\n",
     "    def __init__(\n",
     "        self,\n",
     "        image_channels: int = 3,\n",
     "        image_size: int = 224,\n",
     "        patch_size: int = 16,\n",
+    "        target_size: int = 4,\n",
     "        encoder_layer: int = 4,\n",
     "        nhead: int = 8,\n",
     "        d_model: int = 768,\n",
@@ -801,10 +869,11 @@
     "        layer_norm_eps: float = 1e-05,\n",
     "        bias: bool = False,\n",
     "    ):\n",
-    "        super(ViT, self).__init__()\n",
+    "        super(ViTWithClassifier, self).__init__()\n",
     "        self.image_channels = image_channels\n",
     "        self.image_size = image_size\n",
     "        self.patch_size = patch_size\n",
+    "        self.target_size = target_size\n",
     "        self.encoder_layer = encoder_layer\n",
     "        self.nhead = nhead\n",
     "        self.d_model = d_model\n",
@@ -823,16 +892,6 @@
     "            embedding_dimension=self.d_model,\n",
     "        )\n",
     "\n",
-    "        # self.transformer = TransformerEncoderBlock(\n",
-    "        #     nhead=self.nhead,\n",
-    "        #     d_model=self.d_model,\n",
-    "        #     dim_feedforward=self.dim_feedforward,\n",
-    "        #     dropout=self.dropout,\n",
-    "        #     activation=self.activation,\n",
-    "        #     layer_norm_eps=self.layer_norm_eps,\n",
-    "        #     bias=self.bias,\n",
-    "        # )\n",
-    "\n",
     "        self.transformer = nn.Sequential(\n",
     "            *[\n",
     "                TransformerEncoderBlock(\n",
@@ -850,6 +909,12 @@
     "            ]\n",
     "        )\n",
     "\n",
+    "        self.classifier = Classifier(\n",
+    "            dimension=self.d_model,\n",
+    "            dropout=self.dropout,\n",
+    "            activation=self.activation,\n",
+    "        )\n",
+    "\n",
     "    def forward(self, x: torch.Tensor):\n",
     "        if not isinstance(x, torch.Tensor):\n",
     "            raise TypeError(\"Input must be a torch.Tensor\")\n",
@@ -859,14 +924,18 @@
     "            for layer in self.transformer:\n",
     "                x = layer(x)\n",
     "\n",
+    "            x = torch.mean(x, dim=1)\n",
+    "            x = self.classifier(x)\n",
+    "\n",
     "            return x\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    vit = ViT(\n",
+    "    vit = ViTWithClassifier(\n",
     "        image_channels=1,\n",
     "        image_size=224,\n",
     "        patch_size=16,\n",
+    "        target_size=4,\n",
     "        encoder_layer=4,\n",
     "        nhead=8,\n",
     "        d_model=256,\n",
@@ -876,17 +945,11 @@
     "        layer_norm_eps=1e-05,\n",
     "        bias=False,\n",
     "    )\n",
-    "    \n",
-    "    images = torch.randn((1, 1, 224, 224))\n",
-    "    \n",
-    "    assert (vit(images).size()) == images.size(), \"ViT is not working properly\".capitalize()\n"
+    "\n",
+    "    images = torch.randn((16, 1, 224, 224))\n",
+    "\n",
+    "    assert (vit(images).size()) == (16, 4), \"ViTWithClassifier is not working properly\".capitalize()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4c1434d8",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
