helper method is added in the notebook

--- a/notebooks/ModelPrototype.ipynb
+++ b/notebooks/ModelPrototype.ipynb
@@ -27,6 +27,7 @@
     "import torch.nn as nn\n",
     "from PIL import Image\n",
     "from tqdm import tqdm\n",
+    "import torch.optim as optim\n",
     "from torchvision import transforms\n",
     "from torch.utils.data import DataLoader\n",
     "from sklearn.model_selection import train_test_split"
@@ -950,6 +951,158 @@
     "\n",
     "    assert (vit(images).size()) == (16, 4), \"ViTWithClassifier is not working properly\".capitalize()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4188cdf7",
+   "metadata": {},
+   "source": [
+    "## Helper Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6b1d791",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Criterion(nn.Module):\n",
+    "    def __init__(self, loss_function: str = \"cross_entropy\", reduction: str = \"mean\"):\n",
+    "        super(Criterion, self).__init__()\n",
+    "        self.loss_function = loss_function\n",
+    "        self.reduction = reduction\n",
+    "\n",
+    "        if loss_function == \"cross_entropy\":\n",
+    "            self.criterion = nn.CrossEntropyLoss(reduction=self.reduction)\n",
+    "        elif loss_function == \"cross_entropy_with_logits\":\n",
+    "            self.criterion = nn.CrossEntropyLossWithLogits(reduction=self.reduction)\n",
+    "        else:\n",
+    "            raise ValueError(\"Invalid loss function\")\n",
+    "\n",
+    "    def forward(self, actual: torch.Tensor, predicted: torch.Tensor):\n",
+    "        if not isinstance(actual, torch.Tensor) or not isinstance(\n",
+    "            predicted, torch.Tensor\n",
+    "        ):\n",
+    "            raise ValueError(\"Input must be a torch.Tensor\".capitalize())\n",
+    "\n",
+    "        return self.criterion(actual, predicted)\n",
+    "\n",
+    "\n",
+    "def load_dataloader():\n",
+    "    dataloader_path = \"./data/processed\"\n",
+    "    train_dataloader = os.path.join(dataloader_path, \"train_dataloader.pkl\")\n",
+    "    test_dataloader = os.path.join(dataloader_path, \"test_dataloader.pkl\")\n",
+    "    valid_dataloader = os.path.join(dataloader_path, \"valid_dataloader.pkl\")\n",
+    "\n",
+    "    train_dataloader = load_files(filename=train_dataloader)\n",
+    "    test_dataloader = load_files(filename=test_dataloader)\n",
+    "    valid_dataloader = load_files(filename=valid_dataloader)\n",
+    "\n",
+    "    return {\n",
+    "        \"train_dataloader\": train_dataloader,\n",
+    "        \"test_dataloader\": test_dataloader,\n",
+    "        \"valid_dataloader\": valid_dataloader,\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "def helper(**kwargs):\n",
+    "    model = kwargs[\"model\"]\n",
+    "    lr: float = kwargs[\"lr\"]\n",
+    "    weight_decay: float = kwargs[\"weight_decay\"]\n",
+    "    adam: bool = kwargs[\"adam\"]\n",
+    "    beta1: float = kwargs[\"beta1\"]\n",
+    "    beta2: float = kwargs[\"beta2\"]\n",
+    "    SGD: bool = kwargs[\"SGD\"]\n",
+    "    momentum: float = kwargs[\"momentum\"]\n",
+    "\n",
+    "    if model is None:\n",
+    "        classifier = ViTWithClassifier(\n",
+    "            image_channels=1,\n",
+    "            image_size=224,\n",
+    "            patch_size=16,\n",
+    "            target_size=4,\n",
+    "            encoder_layer=4,\n",
+    "            nhead=8,\n",
+    "            d_model=256,\n",
+    "            dim_feedforward=2048,\n",
+    "            dropout=0.1,\n",
+    "            activation=\"gelu\",\n",
+    "            layer_norm_eps=1e-05,\n",
+    "            bias=False,\n",
+    "        )\n",
+    "    else:\n",
+    "        classifier = model\n",
+    "\n",
+    "    if adam:\n",
+    "        optimizer = optim.Adam(\n",
+    "            params=classifier.parameters(),\n",
+    "            lr=lr,\n",
+    "            betas=(beta1, beta2),\n",
+    "            weight_decay=weight_decay,\n",
+    "        )\n",
+    "    elif SGD:\n",
+    "        optimizer = optim.SGD(\n",
+    "            params=classifier.parameters(),\n",
+    "            lr=lr,\n",
+    "            momentum=momentum,\n",
+    "            weight_decay=weight_decay,\n",
+    "        )\n",
+    "    else:\n",
+    "        raise ValueError(\"Optimizer not found, use 'adam' or 'SGD'\")\n",
+    "    try:\n",
+    "        dataloader = load_dataloader()\n",
+    "    except Exception as e:\n",
+    "        raise ValueError(\n",
+    "            \"Dataloader not found, use 'load_dataloader' to load dataloader\"\n",
+    "        )\n",
+    "\n",
+    "    try:\n",
+    "        criterion = Criterion(loss_function=\"cross_entropy\")\n",
+    "    except Exception as e:\n",
+    "        raise ValueError(\"Criterion not found, use 'Criterion' to load criterion\")\n",
+    "\n",
+    "    return {\n",
+    "        \"classifier\": classifier,\n",
+    "        \"optimizer\": optimizer,\n",
+    "        \"criterion\": criterion,\n",
+    "        \"dataloader\": dataloader,\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    init = helper(\n",
+    "        model=None,\n",
+    "        lr=1e-4,\n",
+    "        adam=True,\n",
+    "        beta1=0.9,\n",
+    "        beta2=0.999,\n",
+    "        weight_decay=0.01,\n",
+    "        SGD=False,\n",
+    "        momentum=0.9,\n",
+    "    )\n",
+    "\n",
+    "    train_dataloader = init[\"dataloader\"][\"train_dataloader\"]\n",
+    "    test_dataloader = init[\"dataloader\"][\"test_dataloader\"]\n",
+    "    valid_dataloader = init[\"dataloader\"][\"valid_dataloader\"]\n",
+    "\n",
+    "    classifier = init[\"classifier\"]\n",
+    "\n",
+    "    criterion = init[\"criterion\"]\n",
+    "\n",
+    "    assert train_dataloader.__class__ == torch.utils.data.dataloader.DataLoader\n",
+    "    assert test_dataloader.__class__ == torch.utils.data.dataloader.DataLoader\n",
+    "    assert valid_dataloader.__class__ == torch.utils.data.dataloader.DataLoader\n",
+    "\n",
+    "    assert classifier.__class__ == ViTWithClassifier\n",
+    "    assert criterion.__class__ == Criterion\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a37720ed",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
