training code is completed in the notebook

--- a/notebooks/ModelPrototype.ipynb
+++ b/notebooks/ModelPrototype.ipynb
@@ -1095,7 +1095,243 @@
     "    assert valid_dataloader.__class__ == torch.utils.data.dataloader.DataLoader\n",
     "\n",
     "    assert classifier.__class__ == ViTWithClassifier\n",
-    "    assert criterion.__class__ == Criterion\n"
+    "    assert criterion.__class__ == Criterion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e366c612",
+   "metadata": {},
+   "source": [
+    "## Trainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad497006",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm import tqdm\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "class Trainer:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        model=None,\n",
+    "        epochs: int = 100,\n",
+    "        lr: float = 0.001,\n",
+    "        beta1: float = 0.5,\n",
+    "        beta2: float = 0.999,\n",
+    "        weight_decay: float = 0.0,\n",
+    "        momentum: float = 0.85,\n",
+    "        adam: bool = True,\n",
+    "        SGD: bool = False,\n",
+    "        l1_regularization: bool = False,\n",
+    "        elasticNet_regularization: bool = False,\n",
+    "        device: str = \"cuda\",\n",
+    "        verbose: bool = True,\n",
+    "    ):\n",
+    "        self.model = model\n",
+    "        self.epochs = epochs\n",
+    "        self.lr = lr\n",
+    "        self.beta1 = beta1\n",
+    "        self.beta2 = beta2\n",
+    "        self.weight_decay = weight_decay\n",
+    "        self.momentum = momentum\n",
+    "        self.adam = adam\n",
+    "        self.SGD = SGD\n",
+    "        self.l1_regularization = l1_regularization\n",
+    "        self.elasticNet_regularization = elasticNet_regularization\n",
+    "        self.device = device\n",
+    "        self.verbose = verbose\n",
+    "\n",
+    "        self.init = helper(\n",
+    "            model=self.model,\n",
+    "            lr=self.lr,\n",
+    "            adam=self.adam,\n",
+    "            beta1=self.beta1,\n",
+    "            beta2=self.beta2,\n",
+    "            weight_decay=self.weight_decay,\n",
+    "            SGD=self.SGD,\n",
+    "            momentum=self.momentum,\n",
+    "        )\n",
+    "\n",
+    "        self.device = device_init(device=device)\n",
+    "\n",
+    "        self.train_dataloader = self.init[\"dataloader\"][\"train_dataloader\"]\n",
+    "        self.test_dataloader = self.init[\"dataloader\"][\"test_dataloader\"]\n",
+    "        self.valid_dataloader = self.init[\"dataloader\"][\"valid_dataloader\"]\n",
+    "\n",
+    "        self.optimizer = self.init[\"optimizer\"]\n",
+    "        self.criterion = self.init[\"criterion\"]\n",
+    "        self.classifier = self.init[\"classifier\"]\n",
+    "\n",
+    "        self.classifier = self.classifier.to(self.device)\n",
+    "        self.criterion = self.criterion.to(self.device)\n",
+    "\n",
+    "        assert self.train_dataloader.__class__ == torch.utils.data.dataloader.DataLoader\n",
+    "        assert self.test_dataloader.__class__ == torch.utils.data.dataloader.DataLoader\n",
+    "        assert self.valid_dataloader.__class__ == torch.utils.data.dataloader.DataLoader\n",
+    "\n",
+    "        assert self.classifier.__class__ == ViTWithClassifier\n",
+    "        assert self.criterion.__class__ == Criterion\n",
+    "\n",
+    "        if self.adam:\n",
+    "            assert self.optimizer.__class__ == torch.optim.Adam\n",
+    "        elif self.SGD:\n",
+    "            assert self.optimizer.__class__ == torch.optim.SGD\n",
+    "        else:\n",
+    "            raise ValueError(\"Optimizer not supported\".capitalize())\n",
+    "\n",
+    "        self.loss = float(\"inf\")\n",
+    "\n",
+    "    def l1_regularizer(self, model: ViTWithClassifier):\n",
+    "        if not isinstance(model, ViTWithClassifier):\n",
+    "            raise ValueError(\"Model must be a ViTWithClassifier\".capitalize())\n",
+    "        return 0.01 * sum(\n",
+    "            torch.norm(input=params, p=1) for params in model.parameters()\n",
+    "        )\n",
+    "\n",
+    "    def elasticNet_regularizer(self, model: ViTWithClassifier):\n",
+    "        if not isinstance(model, ViTWithClassifier):\n",
+    "            raise ValueError(\"Model must be a ViTWithClassifier\".capitalize())\n",
+    "        return 0.01 * sum(\n",
+    "            torch.norm(input=params, p=1) for params in model.parameters()\n",
+    "        ) + 0.01 * sum(torch.norm(input=params, p=2) for params in model.parameters())\n",
+    "\n",
+    "    def saved_checkpoints(self, train_loss: float, epoch: int = 1):\n",
+    "        if not isinstance(train_loss, float):\n",
+    "            raise ValueError(\"Train Loss must be a tensor\".capitalize())\n",
+    "\n",
+    "        if train_loss < self.loss:\n",
+    "            self.loss = train_loss\n",
+    "            torch.save(\n",
+    "                {\n",
+    "                    \"train_loss\": self.loss,\n",
+    "                    \"epoch\": self.epochs,\n",
+    "                    \"model_state_dict\": self.classifier.state_dict(),\n",
+    "                    \"optimizer_state_dict\": self.optimizer.state_dict(),\n",
+    "                },\n",
+    "                os.path.join(\"./artifacts/checkpoints/best_model\", \"best_model.pth\"),\n",
+    "            )\n",
+    "\n",
+    "        torch.save(\n",
+    "            self.classifier.state_dict(),\n",
+    "            os.path.join(\"./artifacts/checkpoints/train_models\", f\"model{epoch}.pth\"),\n",
+    "        )\n",
+    "\n",
+    "    def update_training(self, predicted: torch.Tensor, actual: torch.Tensor):\n",
+    "        if not isinstance(predicted, torch.Tensor) and isinstance(actual, torch.Tensor):\n",
+    "            raise ValueError(\"Predicted and Actual must be tensors\".capitalize())\n",
+    "\n",
+    "        self.optimizer.zero_grad()\n",
+    "\n",
+    "        predicted_loss = self.criterion(predicted, actual)\n",
+    "\n",
+    "        if self.l1_regularization:\n",
+    "            predicted_loss += self.l1_regularizer(self.classifier)\n",
+    "        elif self.elasticNet_regularization:\n",
+    "            predicted_loss += self.elasticNet_regularizer(self.classifier)\n",
+    "\n",
+    "        predicted_loss.backward()\n",
+    "\n",
+    "        self.optimizer.step()\n",
+    "\n",
+    "        return predicted_loss.item()\n",
+    "\n",
+    "    def display(self, **kwargs):\n",
+    "        epoch = kwargs[\"epoch\"]\n",
+    "        train_loss = kwargs[\"train_loss\"]\n",
+    "        valid_loss = kwargs[\"valid_loss\"]\n",
+    "        train_accuracy = kwargs[\"train_accuracy\"]\n",
+    "        valid_accuracy = kwargs[\"valid_accuracy\"]\n",
+    "\n",
+    "        print(\n",
+    "            \"Epochs - [{}/{}] - train_loss: {:.4f} - test_loss: {:.4f} - train_accuracy: {:.4f} - test_accuracy: {:.4f}\".format(\n",
+    "                epoch,\n",
+    "                self.epochs,\n",
+    "                train_loss,\n",
+    "                valid_loss,\n",
+    "                train_accuracy,\n",
+    "                valid_accuracy,\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "    def train(self):\n",
+    "        for epoch in tqdm(range(self.epochs), desc=\"Training Medical-Assistant\"):\n",
+    "            train_loss = []\n",
+    "            valid_loss = []\n",
+    "            total_train_predicted_labels = []\n",
+    "            total_valid_predicted_labels = []\n",
+    "            total_train_actual_labels = []\n",
+    "            total_valid_actual_labels = []\n",
+    "\n",
+    "            for images, labels in self.train_dataloader:\n",
+    "                images = images.to(self.device)\n",
+    "                labels = labels.to(self.device)\n",
+    "\n",
+    "                predicted = self.classifier(images)\n",
+    "\n",
+    "                train_loss.append(\n",
+    "                    self.update_training(predicted=predicted, actual=labels)\n",
+    "                )\n",
+    "                predicted = torch.argmax(input=predicted, dim=1)\n",
+    "                predicted = predicted.detach().cpu().numpy()\n",
+    "\n",
+    "                total_train_predicted_labels.append(predicted)\n",
+    "                total_train_actual_labels.append(labels.detach().cpu().numpy())\n",
+    "\n",
+    "            for images, labels in self.test_dataloader:\n",
+    "                images = images.to(self.device)\n",
+    "                labels = labels.to(self.device)\n",
+    "\n",
+    "                predicted = self.classifier(images)\n",
+    "\n",
+    "                valid_loss.append(self.criterion(predicted, labels).item())\n",
+    "\n",
+    "                predicted = torch.argmax(input=predicted, dim=1)\n",
+    "                predicted = predicted.detach().cpu().numpy()\n",
+    "\n",
+    "                total_valid_predicted_labels.append(predicted)\n",
+    "                total_valid_actual_labels.append(labels.detach().cpu().numpy())\n",
+    "\n",
+    "            train_accuracy = accuracy_score(\n",
+    "                np.concatenate(total_train_predicted_labels),\n",
+    "                np.concatenate(total_train_actual_labels),\n",
+    "            )\n",
+    "            valid_accuracy = accuracy_score(\n",
+    "                np.concatenate(total_valid_predicted_labels),\n",
+    "                np.concatenate(total_valid_actual_labels),\n",
+    "            )\n",
+    "\n",
+    "            self.display(\n",
+    "                epoch=epoch + 1,\n",
+    "                train_loss=np.mean(train_loss),\n",
+    "                valid_loss=np.mean(valid_loss),\n",
+    "                train_accuracy=train_accuracy,\n",
+    "                valid_accuracy=valid_accuracy,\n",
+    "            )\n",
+    "\n",
+    "            self.saved_checkpoints(train_loss=np.mean(train_loss), epoch=epoch + 1)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    trainer = Trainer(\n",
+    "        model=None,\n",
+    "        epochs=100,\n",
+    "        lr=0.001,\n",
+    "        beta1=0.9,\n",
+    "        beta2=0.999,\n",
+    "        weight_decay=0.0001,\n",
+    "        momentum=0.85,\n",
+    "        adam=True,\n",
+    "        SGD=False,\n",
+    "        device=\"mps\",\n",
+    "        verbose=True,\n",
+    "    )\n",
+    "\n",
+    "    trainer.train()"
    ]
   }
  ],
